tearchan-gfx/src/batch/snapshots/tearchan_gfx__batch__buffer__test__events-2.snap
---
source: tearchan-gfx/src/batch/v2/buffer.rs
expression: events

---
[
    Clear(
        BatchBufferPointer {
            first: 1,
            len: 2,
        },
    ),
]
