tearchan-gfx/src/batch/snapshots/tearchan_gfx__batch__buffer__test__events-4.snap
---
source: tearchan-gfx/src/batch/v2/buffer.rs
expression: events

---
[
    Clear(
        BatchBufferPointer {
            first: 3,
            len: 4,
        },
    ),
]
