tearchan-gfx/src/batch/snapshots/tearchan_gfx__batch__buffer__test__sort-2.snap
---
source: tearchan-gfx/src/batch/v2/buffer.rs
expression: convert_events(&mut allocator)

---
[
    ReallocateAll {
        pairs: [
            BatchBufferAllocatorReallocPair {
                from: BatchBufferPointer {
                    first: 0,
                    len: 1,
                },
                to: BatchBufferPointer {
                    first: 0,
                    len: 1,
                },
            },
            BatchBufferAllocatorReallocPair {
                from: BatchBufferPointer {
                    first: 1,
                    len: 2,
                },
                to: BatchBufferPointer {
                    first: 1,
                    len: 2,
                },
            },
            BatchBufferAllocatorReallocPair {
                from: BatchBufferPointer {
                    first: 4,
                    len: 4,
                },
                to: BatchBufferPointer {
                    first: 3,
                    len: 4,
                },
            },
            BatchBufferAllocatorReallocPair {
                from: BatchBufferPointer {
                    first: 8,
                    len: 5,
                },
                to: BatchBufferPointer {
                    first: 7,
                    len: 5,
                },
            },
        ],
    },
    Write(
        BatchBufferPointer {
            first: 0,
            len: 1,
        },
    ),
    Write(
        BatchBufferPointer {
            first: 1,
            len: 2,
        },
    ),
    Write(
        BatchBufferPointer {
            first: 3,
            len: 4,
        },
    ),
    Write(
        BatchBufferPointer {
            first: 7,
            len: 5,
        },
    ),
]
